# ai-hotspot-radar

./: .env.example  AGENTS.md  README.md  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  package.json  pyproject.toml
apps/web/: package.json  tailwind.config.ts
backend/core/: README.md  __init__.py
contracts/openapi/: openapi.yaml
docs/: README.md  requirements-analysis.md  文档说明.md  需求分析.md  验收差距清单.md
docs/archive/: requirements-analysis.md  需求分析归档.md
docs/engineering/: acceptance.md  tech-spec.md  技术方案.md  验收标准.md
docs/plans/: 00-foundation-plan.md  01-关键词计划.md  02-source-ingestion-plan.md  03-AI分析计划.md  03-ai-analysis-plan.md  04-热点管理计划.md  05-notification-plan.md  05-通知计划.md  06-scheduler-plan.md  06-调度计划.md  07-console-plan.md  08-deploy-plan.md  08-部署计划.md  09-acceptance-plan.md  09-验收计划.md  10-AI热点监控MVP计划.md  10-ai-hotspot-monitor-mvp-plan.md  10-yupi-hot-monitor-mvp-plan.md  11-backend-hotspot-detection-reports-plan.md  11-后端热点检测与报告计划.md  12-saas-frontend-platform-plan.md
docs/product/: plan.md  prd.md  产品需求文档.md  执行计划导航.md
docs/research/: 市场调研.md
frontend/web/: README.md  next.config.mjs  package-lock.json  package.json  postcss.config.cjs  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
infra/: docker-compose.yml
infra/env/: .env.example
infra/node/: Dockerfile
services/: __init__.py  bootstrap_data.py
sql/: 001_init_schema.sql
tests/: test_api_routes.py  test_digest_search_feedback_api.py  test_hotspot_discovery.py  test_mvp_services.py  test_source_governance.py  test_worker_digest_delivery.py
(+239 files in other folders)
