[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-hotspot-radar"
version = "0.1.0"
description = "Internal AI hotspot monitoring platform"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.4,<6.0",
    "fastapi>=0.115,<1.0",
    "uvicorn>=0.30,<1.0",
    "httpx>=0.28,<1.0",
    "redis>=5.0,<6.0",
]

[tool.fastapi]
entrypoint = "services.api.app:app"

[tool.setuptools.packages.find]
include = ["backend*", "services*"]
